test/compilable/imports/test13197/y.d
module imports.test13197.y;

class C
{
package:
  void f()
  {
  }
}

