test/fail_compilation/fail52.d
// interface A{void f();}

 class A:B{void f();}
 class B:C{void g();}
 class C:A{void g();}

